Transfert du header dans les autres pages

--- a/municipalite.html
+++ b/municipalite.html
@@ -15,26 +15,26 @@
 
 <body class="page-loisirs page-accent-top">
     <header>
-        <div class=" text-bg-dark border-bottom">
-            <div class="container">
-                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-center">
+        <div class="border-bottom">
+            <div class="header-bg">
+                <div class="d-flex align-items-center justify-content-center justify-content-lg-center pt-3 ">
                     <a href="/"
                         class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                        <img class="navbar-brand" src="Daveluyville-Images/logo-villedavel.png" alt="logo de la ville">
+                        <img class="navbar-brand " src="Daveluyville-Images/logo-villedavel.png" alt="logo de la ville">
                     </a>
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
                             <a href="#" class="nav-link text-white">
-                                <i class="bi bi-tree-fill bi d-block mx-auto mb-1" width="24" height="24"
+                                <i class="bi bi-tree-fill bi d-block mx-auto mb-1 fs-2" width="24" height="24"
                                     aria-hidden="true">
                                     <use xlink:href="#home"></use>
                                 </i>
-                                Loisirs
+                                Socioculturelle
                             </a>
                         </li>
                         <li>
                             <a href="#" class="nav-link text-white">
-                                <i class="bi bi-houses-fill bi d-block mx-auto mb-1" width="24" height="24"
+                                <i class="bi bi-houses-fill bi d-block mx-auto mb-1 fs-2" width="24" height="24"
                                     aria-hidden="true">
                                     <use xlink:href="#home"></use>
                                 </i>
@@ -43,7 +43,8 @@
                         </li>
                         <li>
                             <a href="#" class="nav-link text-white">
-                                <i class="bi bi-bank bi d-block mx-auto mb-1" width="24" height="24" aria-hidden="true">
+                                <i class="bi bi-bank bi d-block mx-auto mb-1 fs-2" width="24" height="24"
+                                    aria-hidden="true">
                                     <use xlink:href="#home"></use>
                                 </i>
                                 Municipalité
@@ -51,24 +52,34 @@
                         </li>
                         <li>
                             <a href="#" class="nav-link text-white">
-                                <i class="bi bi-graph-up-arrow bi d-block mx-auto mb-1" width="24" height="24"
+                                <i class="bi bi-graph-up-arrow bi d-block mx-auto mb-1 fs-2" width="24" height="24"
                                     aria-hidden="true">
                                     <use xlink:href="#home"></use>
                                 </i>Entreprises</a>
                         </li>
+                        <div class="d-flex align-items-center gap-2 ms-3 p-4">
+                            <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto" role="search">
+                                <input type="search" class="form-control" placeholder="Que cherhcez-vous ?"
+                                    aria-label="Search" />
+                            </form>
+                            <button type="button" class="btn btn-primary">Chercher</button>
+                        </div>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="px-3 py-2 border-bottom mb-0">
-
-            <div class="container d-flex flex-wrap justify-content-center">
-                <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto" role="search">
-                    <input type="search" class="form-control" placeholder="Que cherhcez-vous ?" aria-label="Search" />
-                </form>
-
-                <button type="button" class="btn btn-primary">Chercher</button>
-            </div>
+        <div class="nav-scroller py-1 mb-3 border-bottom">
+            <nav class="container container nav nav-underline justify-content-between">
+                <a class="nav-item nav-link link-body-emphasis" href="#">Centre Piché</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">Écoles - CSBF</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">CPE - Garderie</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">Les parcs</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">Bibliothèque</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">Bottin des entreprises</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">Carrefour des générations</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">Évènements</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#"> Journal Le causeur</a>
+            </nav>
         </div>
 
     </header>
