Ajout des sections municipalité et équipe _ images et contenu

--- a/acceuil.html
+++ b/acceuil.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css  ">
 </head>
 
-<body class="page-loisirs page-accent-top">
+<body>
     <header>
         <div class="border-bottom">
             <div class="header-bg">
