--- a/municipalite.html
+++ b/municipalite.html
@@ -78,115 +78,242 @@
                 <a class="nav-item nav-link link-body-emphasis" href="#">Bottin des entreprises</a>
                 <a class="nav-item nav-link link-body-emphasis" href="#">Carrefour des générations</a>
                 <a class="nav-item nav-link link-body-emphasis" href="#">Évènements</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#"> Journal Le causeur</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">Journal Le causeur</a>
             </nav>
         </div>
 
     </header>
 
-<main>
-    <!-- Section Hôtel de ville -->
-    <section class="hotel container ">
-        <h2 class="hotel__titre display-2">Hôtel de ville</h2>
-        <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
-            <div class="col-lg-6 px-0">
-                <h1 class="display-4 fst-italic">
-                    Scéances du conseil
-                </h1>
-                <p class="lead my-3">
-                    Dates des prochaines scéances du conseil municipal de Daveluyville.
-                    Ordre du jour <br> Archives des scéances
-                </p>
-                <p class="lead mb-0">
-                    <a href="#" class="text-body-emphasis fw-bold">En savoir plus...</a>
-                </p>
+    <main>
+        <!-- Section 1 Municipalités -->
+        <section class="container mt-5">
+            <h1 class="display-3">Hôtel de ville</h1>
+            <h3 class="display-6 fst-italic mt-4">Municipalité </h3>
+            <div class="p-4 p-md-1 mb-4 rounded text-body-emphasis bg-body-secondary">
+
+                <!-- Section Scéance du conseil -->
+                <!-- FRAMES DE 3 RONDS-->
+                <div class="container mt-1">
+
+                    <div class="row">
+                        <!-- INFOS 1-->
+                        <div class="col-lg-4 align-items-center text-center">
+                            <svg aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="140"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect width="100%" height="100%" fill=""></rect>
+                            </svg>
+                            <h3 class="fw-normal">Scéance du conseil</h3>
+                            <p>
+                                le 15 décembre 2025 <br>19h00 au Centre Piché.
+                            </p>
+                            <p>
+                                <a class="btn btn-secondary" href="#">Archives</a>
+                            </p>
+                        </div>
+                        <!-- INFOS 2-->
+                        <div class="col-lg-4 align-items-center text-center ">
+                            <svg aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="140"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                            </svg>
+                            <h3 class="fw-normal">Avis Publics</h3>
+                            <p>
+                                Consulter les avis publics <br> en cours et à venir.
+                            </p>
+                            <p>
+                                <a class="btn btn-secondary" href="#">Archives</a>
+                            </p>
+                        </div>
+                        <!-- INFOS 3 -->
+                        <div class="col-lg-4 align-items-center text-center">
+                            <svg aria-label="Placeholder" class="bd-placeholder-img rounded-circle" height="140"
+                                preserveAspectRatio="xMidYMid slice" role="img" width="140"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                            </svg>
+                            <h3 class="fw-normal">Projet et Règlements</h3>
+                            <p>
+                                Dans cette section vous aurez accès aux différents projets <br> et règlements
+                                municipaux, permis et formulaires.
+                            </p>
+                            <p>
+                                <a class="btn btn-secondary" href="#">Consulter</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <hr class=" m-5">
+        <!-- Section  Équipe -->
+        <section class="container mt-4">
+            <div class="row align-items-center">
+                <h3 class="display-6 fst-italic ">
+                    Votre équipe municipale
+
+                    <a class="btn btn-secondary" href="#">En savoir plus</a>
+
+                </h3>
+
+                <!-- FRAMES DE 3 RONDS-->
+
+                <div class="col-lg-4 align-items-center text-center mb-4">
+                    <img src="Daveluyville-Images/équipe-maire.jpg" alt="Maire de la ville"
+                        class="img-fluid rounded shadow" style="max-width: 80%; height: auto;">
+                    <h3 class="fw-normal">MATHIEU</h3>
+                    <p>
+                        Maire
+                    </p>
+                </div>
+
+
+                <!-- Conseiller -->
+                <div class="col-lg-8">
+                    <div class=" row g-3 justify-content-center">
+                        <div class="col-4">
+                            <img src="Daveluyville-Images/équipe-nadialeclerc.jpg" alt=""
+                                class=" img-fluid rounded-circle" height="180" width="180">
+                            <h3 class="fw-normal">Nadia Leclerc</h3>
+                            <p>
+                                Conseillère no. 1
+                            </p>
+                        </div>
+                        <div class="col-4">
+                            <img src="Daveluyville-Images/équipe-sébastienbilodeau.jpg" alt=""
+                                class=" img-fluid rounded-circle" height="180" width="180">
+                            <h3 class="fw-normal">Sébastien Bilodeau</h3>
+                            <p>
+                                Conseillère no. 2
+                            </p>
+                        </div>
+                        <div class="col-4">
+                            <img src="Daveluyville-Images/équipe-valérieloiselle.jpg" alt=""
+                                class=" img-fluid rounded-circle" height="180" width="180">
+                            <h3 class="fw-normal">Valérie Loiselle</h3>
+                            <p>
+                                Conseillère no. 3
+                            </p>
+                        </div>
+                        <div class="col-4">
+                            <img src="Daveluyville-Images/équipe-alainraymond.jpg" alt=""
+                                class=" img-fluid rounded-circle" height="180" width="180">
+                            <h3 class="fw-normal">Alain Raymond</h3>
+                            <p>
+                                Conseillère no. 4
+                            </p>
+                        </div>
+                        <div class="col-4">
+                            <img src="Daveluyville-Images/équipe-caroleanneprovencher.jpg" alt=""
+                                class=" img-fluid rounded-circle" height="180" width="180">
+                            <h3 class="fw-normal">Carol-Anne Provencher</h3>
+                            <p>
+                                Conseillère no. 5
+                            </p>
+                        </div>
+                        <div class="col-4">
+                            <img src="Daveluyville-Images/équipe-christinegentes.jpg" alt=""
+                                class=" img-fluid rounded-circle" height="180" width="180">
+                            <h3 class="fw-normal">Christine Gentes</h3>
+                            <p>
+                                Conseillère no. 6
+                            </p>
+                        </div>
+
+
+
+
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <footer class="py-5">
+        <div class="row">
+            <div class="col-6 col-md-2 mb-3">
+
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2">
+                        <a href="#" class="nav-link p-0 text-body-secondary">Loisirs</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a href="#" class="nav-link p-0 text-body-secondary">Citoyens</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a href="#" class="nav-link p-0 text-body-secondary">Municipalités</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a href="#" class="nav-link p-0 text-body-secondary">Entreprises</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-6 col-md-2 mb-3">
+
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2">
+                        <a href="#" class="nav-link p-0 text-body-secondary">Application GESTRIO</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a href="#" class="nav-link p-0 text-body-secondary">Programme vidange fosses septiques</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a href="#" class="nav-link p-0 text-body-secondary">Avis public</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a href="#" class="nav-link p-0 text-body-secondary">Offre d'emplois</a>
+                    </li>
+                    <li class="nav-item mb-2">
+                        <a href="#" class="nav-link p-0 text-body-secondary">Histoire de la ville</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-md-5 offset-md-1 mb-3">
+                <ul class="nav flex-row">
+                    <li class="nav-item mb-2">
+                        <img src="Daveluyville-Images/MatriceMRC.jpg" alt=" accès Matrice MRC">
+                    </li>
+                    <li class="nav-item  ms-5">
+                        <img src="Daveluyville-Images/victoetsaregion.png" alt="accès Victo et sa région">
+                    </li>
+                    <li class="nav-item  ms-5">
+                        <a href="https://daveluyville.appvoila.com/fr/">
+                            <img src="Daveluyville-Images/logo-voila-davel.png" alt="accès Portail Voilà"></a>
+                    </li>
+                </ul>
+
             </div>
         </div>
-        <!-- Scéances du conseil -->
-    </section>
-
-</main>
-
-
-<footer class="py-5">
-    <div class="row">
-        <div class="col-6 col-md-2 mb-3">
-
-            <ul class="nav flex-column">
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-body-secondary">Loisirs</a>
+        <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+            <p>&copy; 2025 Company, Inc. All rights reserved.</p>
+            <ul class="list-unstyled d-flex">
+                <li class="ms-3">
+                    <a class="link-body-emphasis" href="#" aria-label="Instagram"><svg class="bi" width="24"
+                            height="24">
+                            <use xlink:href="#instagram"></use>
+                        </svg></a>
                 </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-body-secondary">Citoyens</a>
-                </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-body-secondary">Municipalités</a>
-                </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-body-secondary">Entreprises</a>
+                <li class="ms-3">
+                    <a class="link-body-emphasis" href="#" aria-label="Facebook"><svg class="bi" width="24" height="24"
+                            aria-hidden="true">
+                            <use xlink:href="#facebook"></use>
+                        </svg></a>
                 </li>
             </ul>
         </div>
-        <div class="col-6 col-md-2 mb-3">
-
-            <ul class="nav flex-column">
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-body-secondary">Application GESTRIO</a>
-                </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-body-secondary">Programme vidange fosses septiques</a>
-                </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-body-secondary">Avis public</a>
-                </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-body-secondary">Offre d'emplois</a>
-                </li>
-                <li class="nav-item mb-2">
-                    <a href="#" class="nav-link p-0 text-body-secondary">Histoire de la ville</a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="col-md-5 offset-md-1 mb-3">
-            <ul class="nav flex-row">
-                <li class="nav-item mb-2">
-                    <img src="Daveluyville-Images/MatriceMRC.jpg" alt=" accès Matrice MRC">
-                </li>
-                <li class="nav-item  ms-5">
-                    <img src="Daveluyville-Images/victoetsaregion.png" alt="accès Victo et sa région">
-                </li>
-                <li class="nav-item  ms-5">
-                    <a href="https://daveluyville.appvoila.com/fr/">
-                        <img src="Daveluyville-Images/logo-voila-davel.png" alt="accès Portail Voilà"></a>
-                </li>
-            </ul>
-
-        </div>
-    </div>
-    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-        <p>&copy; 2025 Company, Inc. All rights reserved.</p>
-        <ul class="list-unstyled d-flex">
-            <li class="ms-3">
-                <a class="link-body-emphasis" href="#" aria-label="Instagram"><svg class="bi" width="24" height="24">
-                        <use xlink:href="#instagram"></use>
-                    </svg></a>
-            </li>
-            <li class="ms-3">
-                <a class="link-body-emphasis" href="#" aria-label="Facebook"><svg class="bi" width="24" height="24"
-                        aria-hidden="true">
-                        <use xlink:href="#facebook"></use>
-                    </svg></a>
-            </li>
-        </ul>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
-        integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
-        crossorigin="anonymous"></script>
-</footer>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
+            integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
+            crossorigin="anonymous"></script>
+    </footer>
 
 </body>
 
