Ajustement variés :footer +  section histoire de la ville et css

--- a/acceuil.html
+++ b/acceuil.html
@@ -59,7 +59,7 @@
                         </li>
                         <div class="d-flex align-items-center gap-2 ms-3 p-4">
                             <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto" role="search">
-                                <input type="search" class="form-control" placeholder="Que cherhcez-vous ?"
+                                <input type="search" class="form-control" placeholder="Que cherchez-vous ?"
                                     aria-label="Search" />
                             </form>
                             <button type="button" class="btn btn-primary">Chercher</button>
@@ -71,9 +71,8 @@
         <div class="nav-scroller py-1 mb-3 border-bottom">
             <nav class="container container nav nav-underline justify-content-between">
                 <a class="nav-item nav-link link-body-emphasis" href="#">Centre Piché</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Écoles - CSBF</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">CPE - Garderie</a>
-                <a class="nav-item nav-link link-body-emphasis" href="#">Les parcs</a>
+                <a class="nav-item nav-link link-body-emphasis" href="#">Vivre ici !</a>
+                
                 <a class="nav-item nav-link link-body-emphasis" href="#">Bibliothèque</a>
                 <a class="nav-item nav-link link-body-emphasis" href="#">Bottin des entreprises</a>
                 <a class="nav-item nav-link link-body-emphasis" href="#">Carrefour des générations</a>
@@ -110,12 +109,12 @@
                         </div>
                         <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAG5irp-8QY&#x2F;lJ8htT4KNPtA4lP9TzqpaA&#x2F;watch?utm_content=DAG5irp-8QY&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
                             target="_blank" rel="noopener">Calendrier Daveluyville</a> par EG GE
-                        
+
                         <div class="container">
                             <div class="text-dark carousel-caption text-end">
                                 <h1 class="display-2">Décembre 2025</h1>
                                 <p>
-                                   Consulter notre infolettre pour les activités et événements du mois de décembre.
+                                    Consulter notre infolettre pour les activités et événements du mois de décembre.
                                 </p>
                                 <p>
                                     <a class="btn btn-lg" href="#">Infolettre</a>
@@ -132,12 +131,11 @@
                         </svg>
                         <div class="container">
                             <div class="carousel-caption">
-                                <h1>Another example headline.</h1>
+                                <h1>Vivre ici !</h1>
                                 <p>
-                                    Some representative placeholder content for the second slide
-                                    of the carousel.
+                                  Une ville familliale en expansion, au coeur de la nature qui offre des espaces communautaires de qualité à ses citoyens.
                                 </p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                                <p><a class="btn btn-lg btn-primary" href="#">Découvrir la ville</a></p>
                             </div>
                         </div>
                     </div>
@@ -150,13 +148,15 @@
                         </svg>
                         <div class="container">
                             <div class="carousel-caption text-end">
-                                <h1>One more for good measure.</h1>
+                                <h1>Parc industriel</h1>
                                 <p>
-                                    Some representative placeholder content for the third slide of
-                                    this carousel.
+                                    Bienvenues au entrepeneurs commerciale,découvrez les opportunités d'affaires et de développement offertes par notre
+                                    parc
+                                    industriel
+                                    stratégique.
                                 </p>
                                 <p>
-                                    <a class="btn btn-lg btn-primary" href="#">Browse gallery</a>
+                                    <a class="btn btn-lg btn-primary" href="#">Bottin des entreprises</a>
                                 </p>
                             </div>
                         </div>
@@ -331,9 +331,8 @@
 
     </div>
 
-
-    <footer class="py-5">
-        <div class="row">
+    <footer class="py-4">
+        <div class="row m-4">
             <div class="col-6 col-md-2 mb-3">
 
                 <ul class="nav flex-column">
@@ -351,7 +350,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-6 col-md-2 mb-3">
+            <div class="col-6 col-md-2 mb-2">
 
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2">
@@ -375,33 +374,22 @@
             <div class="col-md-5 offset-md-1 mb-3">
                 <ul class="nav flex-row">
                     <li class="nav-item mb-2">
-                        <img src="Daveluyville-Images/MatriceMRC.jpg" alt="">
+                        <img src="Daveluyville-Images/MatriceMRC.jpg" alt=" accès Matrice MRC">
                     </li>
                     <li class="nav-item  ms-5">
-                        <img src="Daveluyville-Images/victoetsaregion.png" alt="">
-
+                        <img src="Daveluyville-Images/victoetsaregion.png" alt="accès Victo et sa région">
                     </li>
-
+                    <li class="nav-item  ms-5">
+                        <a href="https://daveluyville.appvoila.com/fr/">
+                            <img src="Daveluyville-Images/logo-voila-davel.png" alt="accès Portail Voilà"></a>
+                    </li>
                 </ul>
 
             </div>
         </div>
-        <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-            <p>&copy; 2025 Company, Inc. All rights reserved.</p>
-            <ul class="list-unstyled d-flex">
-                <li class="ms-3">
-                    <a class="link-body-emphasis" href="#" aria-label="Instagram"><svg class="bi" width="24"
-                            height="24">
-                            <use xlink:href="#instagram"></use>
-                        </svg></a>
-                </li>
-                <li class="ms-3">
-                    <a class="link-body-emphasis" href="#" aria-label="Facebook"><svg class="bi" width="24" height="24"
-                            aria-hidden="true">
-                            <use xlink:href="#facebook"></use>
-                        </svg></a>
-                </li>
-            </ul>
+        <div class="d-flex flex-column flex-sm-row justify-content-between py-2 border-top">
+            <p class="p-3">&copy; 2025 Company, Inc. All rights reserved.</p>
+
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
