--- a/loisirs.html
+++ b/loisirs.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css  ">
 </head>
 
-<body class="page-loisirs page-accent-top">
+<body>
     <header>
         <div class="border-bottom">
             <div class="header-bg">
@@ -86,8 +86,8 @@
     <main>
         <!-- Section Socioculturelle -->
 
-        <section class="container my-5">
-            <h2 class=" loisirs mt-5 mb-4 display-2">Socioculturelle</h2>
+        <section class="container ">
+            <h2 class=" loisirs mt-5 mb-4 display-1">Socioculturelle</h2>
             <div class="row g-3 justify-content-center">
                 <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                     <div class="card h-100">
@@ -189,7 +189,7 @@
             </div>
 
         </section>
-        <hr class="mb-0">
+        <hr class="mb-2">
 
 
         <!-- Section Inscription -->
@@ -329,26 +329,26 @@
     </main>
 
 
-    <footer class="py-5">
-        <div class="row">
+    <footer class="py-4">
+        <div class="row m-4">
             <div class="col-6 col-md-2 mb-3">
 
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Loisirs</a>
+                        <a href="loisirs.html" class="nav-link p-0 text-body-secondary">Loisirs</a>
                     </li>
                     <li class="nav-item mb-2">
                         <a href="#" class="nav-link p-0 text-body-secondary">Citoyens</a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a href="#" class="nav-link p-0 text-body-secondary">Municipalités</a>
+                        <a href="municipalite.html" class="nav-link p-0 text-body-secondary">Municipalités</a>
                     </li>
                     <li class="nav-item mb-2">
                         <a href="#" class="nav-link p-0 text-body-secondary">Entreprises</a>
                     </li>
                 </ul>
             </div>
-            <div class="col-6 col-md-2 mb-3">
+            <div class="col-6 col-md-2 mb-2">
 
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2">
@@ -385,22 +385,9 @@
 
             </div>
         </div>
-        <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-            <p>&copy; 2025 Company, Inc. All rights reserved.</p>
-            <ul class="list-unstyled d-flex">
-                <li class="ms-3">
-                    <a class="link-body-emphasis" href="#" aria-label="Instagram"><svg class="bi" width="24"
-                            height="24">
-                            <use xlink:href="#instagram"></use>
-                        </svg></a>
-                </li>
-                <li class="ms-3">
-                    <a class="link-body-emphasis" href="#" aria-label="Facebook"><svg class="bi" width="24" height="24"
-                            aria-hidden="true">
-                            <use xlink:href="#facebook"></use>
-                        </svg></a>
-                </li>
-            </ul>
+        <div class="d-flex flex-column flex-sm-row justify-content-between py-2 border-top">
+            <p class="p-3">&copy; 2025 Company, Inc. All rights reserved.</p>
+          
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
