--- a/municipalite.html
+++ b/municipalite.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css  ">
 </head>
 
-<body class="page-loisirs page-accent-top">
-    <header>
+<body>
+    <header class="municipalite">
         <div class="border-bottom">
             <div class="header-bg">
                 <div class="d-flex align-items-center justify-content-center justify-content-lg-center pt-3 ">
@@ -89,11 +89,11 @@
         <section class="container mt-5">
             <h1 class="display-3">Hôtel de ville</h1>
             <h3 class="display-6 fst-italic mt-4">Municipalité </h3>
-            <div class="p-4 p-md-1 mb-4 rounded text-body-emphasis bg-body-secondary">
+            <div class="p-4 p-md-2 mb-4 rounded text-body-emphasis bg-body-hotel-de-ville">
 
                 <!-- Section Scéance du conseil -->
                 <!-- FRAMES DE 3 RONDS-->
-                <div class="container mt-1">
+                <div class="container mt-4">
 
                     <div class="row">
                         <!-- INFOS 1-->
@@ -225,17 +225,47 @@
                         </div>
 
 
-
-
-
                     </div>
                 </div>
             </div>
         </section>
 
+        <div class="b-example-divider"></div>
+        <div class="container my-5">
+            <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+                <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+                    <h1 class="display-4 fw-bold lh-1 text-body-emphasis">
+                        Histoire de la ville
+                    </h1>
+                    <p class="lead">
+                        La petite ville de Daveluyville occupe une position avantageuse en bordure de l’autoroute 20 et
+                        de la route 261 menant au port de Bécancour. La ville s’étend le long de la rivière Bécancour.
+                        Elle fait partie des municipalités du Centre-du-Québec et de
+                        la MRC d’Arthabaska.
+                    </p>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+                        <a href="https://histoire-du-quebec.ca/daveluyville/">
+                            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">
+                                Histoire de la ville
+                            </button>
+                        </a>
+                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">
+                       Interprétation du Logo de la ville
+                        </button>
+                    </div>
+                </div>
+                <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                    <img class="rounded-lg-3" src="Daveluyville-Images/gare-1920-daveluyville.jpg" alt=""
+                        width="100%" />
+                </div>
+            </div>
+        </div>
+
+
+
     </main>
-    <footer class="py-5">
-        <div class="row">
+    <footer class="py-4">
+        <div class="row m-4">
             <div class="col-6 col-md-2 mb-3">
 
                 <ul class="nav flex-column">
@@ -253,7 +283,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-6 col-md-2 mb-3">
+            <div class="col-6 col-md-2 mb-2">
 
                 <ul class="nav flex-column">
                     <li class="nav-item mb-2">
@@ -290,22 +320,9 @@
 
             </div>
         </div>
-        <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-            <p>&copy; 2025 Company, Inc. All rights reserved.</p>
-            <ul class="list-unstyled d-flex">
-                <li class="ms-3">
-                    <a class="link-body-emphasis" href="#" aria-label="Instagram"><svg class="bi" width="24"
-                            height="24">
-                            <use xlink:href="#instagram"></use>
-                        </svg></a>
-                </li>
-                <li class="ms-3">
-                    <a class="link-body-emphasis" href="#" aria-label="Facebook"><svg class="bi" width="24" height="24"
-                            aria-hidden="true">
-                            <use xlink:href="#facebook"></use>
-                        </svg></a>
-                </li>
-            </ul>
+        <div class="d-flex flex-column flex-sm-row justify-content-between py-2 border-top">
+            <p class="p-3">&copy; 2025 Company, Inc. All rights reserved.</p>
+          
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
